feat: atualização navbar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leonardo Betetto | Reaftfólio</title>
+    <title>Leonardo Betetto | Reactfólio</title>
     <link rel="shortcut icon" href="./src/assets/favReact.png" type="image/x-icon">
   </head>
   <body>
